--- a/moocs.html
+++ b/moocs.html
@@ -71,7 +71,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.linkedin.com/learning/certificates/73b0dab7f43845d66450da9fa81ed1d560d22985fe2b154c02eca6b933650292"
-                                        target="_blank" class="fw-bold text-dark">Programming Foundations:
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Programming Foundations:
                                         Fundamentals</a>
                                 </div>
                                 <small class="d-block text-secondary">LinkedIn</small>
@@ -88,7 +88,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://coursera.org/share/7a9df9a851c8e251289c4576836ee192"
-                                        target="_blank" class="fw-bold text-dark">Introduction to Augmented Reality and
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Introduction to Augmented Reality and
                                         ARCore</a>
                                 </div>
                                 <small class="d-block text-secondary">Google - Coursera</small>
@@ -105,7 +105,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://coursera.org/share/7ba39f40af1df636ddeb80fcef5833e3"
-                                        target="_blank" class="fw-bold text-dark">Introduction to Front-End
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Introduction to Front-End
                                         Development</a>
                                 </div>
                                 <small class="d-block text-secondary">Meta - Coursera</small>
@@ -122,7 +122,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.freecodecamp.org/certification/mohammadnaeemtahir/responsive-web-design"
-                                        target="_blank" class="fw-bold text-dark">Responsive Web Design</a>
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Responsive Web Design</a>
                                 </div>
                                 <small class="d-block text-secondary">FreeCodeCamp</small>
                             </div>
@@ -137,8 +137,25 @@
                             </div>
                             <div class="card-footer">
                                 <div class="mb-3">
+                                    <a href="https://courses.edx.org/certificates/436be34e8510462497eb255b55109b81"
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Exercising Leadership: Foundational
+                                        Principles</a>
+                                </div>
+                                <small class="d-block text-secondary">Google Garage</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body p-0">
+                                <img class="img-fluid" src="/assets/files/moocs/digital-marketing.png" alt="">
+                            </div>
+                            <div class="card-footer">
+                                <div class="mb-3">
                                     <a href="https://learndigital.withgoogle.com/d6dc5a9e-98c3-4cbe-81e9-4fc0d0fb78fc"
-                                        target="_blank" class="fw-bold text-dark">The Fundamentals of Digital
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">The Fundamentals of Digital
                                         Marketing</a>
                                 </div>
                                 <small class="d-block text-secondary">Google Garage</small>
@@ -155,7 +172,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.kaggle.com/learn/certification/mohammadnaeemtahir/pandas"
-                                        target="_blank" class="fw-bold text-dark">Pandas</a>
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Pandas</a>
                                 </div>
                                 <small class="d-block text-secondary">Kaggle</small>
                             </div>
@@ -172,7 +189,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.udemy.com/certificate/UC-7f9a305d-f3a1-4287-924c-8b0cf6e4b32d/"
-                                        target="_blank" class="fw-bold text-dark">First Steps Into Public
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">First Steps Into Public
                                         Speaking</a>
                                 </div>
                                 <small class="d-block text-secondary">Udemy</small>
@@ -189,7 +206,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-QECLKNO6" target="_blank"
-                                        class="fw-bold text-dark">jQuery</a>
+                                        class="fw-bold text-dark text-decoration-none">jQuery</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -205,7 +222,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-2XGJTOIV" target="_blank"
-                                        class="fw-bold text-dark">PHP</a>
+                                        class="fw-bold text-dark text-decoration-none">PHP</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -221,7 +238,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-HJBX1WIG" target="_blank"
-                                        class="fw-bold text-dark">SQL</a>
+                                        class="fw-bold text-dark text-decoration-none">SQL</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -237,7 +254,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-SQMJTPYX" target="_blank"
-                                        class="fw-bold text-dark">Coding for Marketers</a>
+                                        class="fw-bold text-dark text-decoration-none">Coding for Marketers</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -253,7 +270,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-SKQ9PRLM" target="_blank"
-                                        class="fw-bold text-dark">HTML</a>
+                                        class="fw-bold text-dark text-decoration-none">HTML</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -269,7 +286,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-DIJ08RMX" target="_blank"
-                                        class="fw-bold text-dark">Python for Beginners</a>
+                                        class="fw-bold text-dark text-decoration-none">Python for Beginners</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -285,7 +302,7 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.sololearn.com/certificates/CT-BBYY7PXB" target="_blank"
-                                        class="fw-bold text-dark">C++</a>
+                                        class="fw-bold text-dark text-decoration-none">C++</a>
                                 </div>
                                 <small class="d-block text-secondary">Sololearn</small>
                             </div>
@@ -298,7 +315,8 @@
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Made with ❤️ by Muhammad Naeem Tahir | No copyrights reserved.</div>
+            <div class="small text-center text-muted">Made with ❤️ by Muhammad Naeem Tahir | No copyrights reserved.
+            </div>
 
         </div>
     </footer>
