portfolio updated, 05_DEC_2022

--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-primary btn-xl" href="/assets/files/resume-muhammad-naeem-tahir.pdf"
-                            download>VIEW MORE</a>
+                        <a class="btn btn-primary btn-xl" href="/portfolio.html">VIEW MORE</a>
                     </div>
                 </div>
             </div>
