updated pages links

--- a/moocs.html
+++ b/moocs.html
@@ -34,6 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#moocs">MOOCs</a></li>
                     <li class="nav-item"><a class="nav-link" href="/internships.html">Internships & Certificates</a>
                     </li>
@@ -71,7 +72,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.linkedin.com/learning/certificates/73b0dab7f43845d66450da9fa81ed1d560d22985fe2b154c02eca6b933650292"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">Programming Foundations:
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Programming
+                                        Foundations:
                                         Fundamentals</a>
                                 </div>
                                 <small class="d-block text-secondary">LinkedIn</small>
@@ -88,7 +90,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://coursera.org/share/7a9df9a851c8e251289c4576836ee192"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">Introduction to Augmented Reality and
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Introduction to
+                                        Augmented Reality and
                                         ARCore</a>
                                 </div>
                                 <small class="d-block text-secondary">Google - Coursera</small>
@@ -105,7 +108,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://coursera.org/share/7ba39f40af1df636ddeb80fcef5833e3"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">Introduction to Front-End
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Introduction to
+                                        Front-End
                                         Development</a>
                                 </div>
                                 <small class="d-block text-secondary">Meta - Coursera</small>
@@ -122,7 +126,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.freecodecamp.org/certification/mohammadnaeemtahir/responsive-web-design"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">Responsive Web Design</a>
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Responsive Web
+                                        Design</a>
                                 </div>
                                 <small class="d-block text-secondary">FreeCodeCamp</small>
                             </div>
@@ -138,7 +143,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://courses.edx.org/certificates/436be34e8510462497eb255b55109b81"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">Exercising Leadership: Foundational
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">Exercising
+                                        Leadership: Foundational
                                         Principles</a>
                                 </div>
                                 <small class="d-block text-secondary">Google Garage</small>
@@ -155,7 +161,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://learndigital.withgoogle.com/d6dc5a9e-98c3-4cbe-81e9-4fc0d0fb78fc"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">The Fundamentals of Digital
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">The Fundamentals
+                                        of Digital
                                         Marketing</a>
                                 </div>
                                 <small class="d-block text-secondary">Google Garage</small>
@@ -189,7 +196,8 @@
                             <div class="card-footer">
                                 <div class="mb-3">
                                     <a href="https://www.udemy.com/certificate/UC-7f9a305d-f3a1-4287-924c-8b0cf6e4b32d/"
-                                        target="_blank" class="fw-bold text-dark text-decoration-none">First Steps Into Public
+                                        target="_blank" class="fw-bold text-dark text-decoration-none">First Steps Into
+                                        Public
                                         Speaking</a>
                                 </div>
                                 <small class="d-block text-secondary">Udemy</small>
