--- a/internships.html
+++ b/internships.html
@@ -34,6 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="/moocs.html">MOOCs</a></li>
                     <li class="nav-item"><a class="nav-link" href="#internships">Internships & Certificates</a></li>
                 </ul>
@@ -128,7 +129,8 @@
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Made with ❤️ by Muhammad Naeem Tahir | No copyrights reserved.</div>
+            <div class="small text-center text-muted">Made with ❤️ by Muhammad Naeem Tahir | No copyrights reserved.
+            </div>
 
         </div>
     </footer>
