github link updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             class="text-light mx-1">
                             <i class="bi bi-linkedin fs-3"></i>
                         </a>
-                        <a href="https://github.com/mohammadnaeemtahir" target="_blank" class="text-light mx-1">
+                        <a href="https://github.com/muhammadnaeemtahir" target="_blank" class="text-light mx-1">
                             <i class="bi bi-github fs-3"></i>
                         </a>
                     </div>
