blog updates and home button changes

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="/moocs.html">MOOCs</a></li>
                     <li class="nav-item"><a class="nav-link" href="/internships.html">Internships & Certificates</a>
+                    <li class="nav-item"><a class="nav-link" href="./blog/blog.html">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -66,6 +67,15 @@
                         </a>
                         <a href="https://github.com/muhammadnaeemtahir" target="_blank" class="text-light mx-1">
                             <i class="bi bi-github fs-3"></i>
+                        </a>
+                    </div>
+                    <div class="text-center my-3">
+                        <a href="#" class="fw-bold" id="glowing-button">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            Read My Blogs
                         </a>
                     </div>
                 </div>
