--- a/moocs.html
+++ b/moocs.html
@@ -38,6 +38,7 @@
                     <li class="nav-item"><a class="nav-link" href="#moocs">MOOCs</a></li>
                     <li class="nav-item"><a class="nav-link" href="/internships.html">Internships & Certificates</a>
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="./blog/blog.html">Blog</a>
                 </ul>
             </div>
         </div>
