--- a/internships.html
+++ b/internships.html
@@ -37,6 +37,7 @@
                     <li class="nav-item"><a class="nav-link" href="/portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="/moocs.html">MOOCs</a></li>
                     <li class="nav-item"><a class="nav-link" href="#internships">Internships & Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./blog/blog.html">Blog</a>
                 </ul>
             </div>
         </div>
