read blog button, updated!

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </a>
                     </div>
                     <div class="text-center my-3">
-                        <a href="#" class="fw-bold" id="glowing-button">
+                        <a href="./blog/blog.html" class="fw-bold" id="glowing-button">
                             <span></span>
                             <span></span>
                             <span></span>
