--- a/internships.html
+++ b/internships.html
@@ -67,6 +67,29 @@
                     <div class="mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body p-0">
+                                <img class="img-fluid" src="/assets/files/internships-and-certificates/entpandweb.png"
+                                    alt="">
+                            </div>
+                            <div class="card-footer">
+                                <div class="mb-3">
+                                    <a href="#" target="_blank"
+                                        class="fw-bold text-decoration-none text-dark">Entrepreneurship & Innovation Web
+                                        Development Virtual Experience Program
+                                    </a>
+                                    <small class="d-block text-secondary">Moreton Bay Regional Council - Virtual</small>
+                                </div>
+                                <small class="d-block">It like to work in web development in the tourism industry. From
+                                    planning the website, this program equiped me with the skills I needed to succeed in
+                                    any web
+                                    development role.</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body p-0">
                                 <img class="img-fluid"
                                     src="/assets/files/internships-and-certificates/align-technology-software-engineering.png"
                                     alt="">
