--- a/moocs.html
+++ b/moocs.html
@@ -148,7 +148,7 @@
                                         Leadership: Foundational
                                         Principles</a>
                                 </div>
-                                <small class="d-block text-secondary">Google Garage</small>
+                                <small class="d-block text-secondary">edX</small>
                             </div>
                         </div>
                     </div>
