--- a/internships.html
+++ b/internships.html
@@ -78,7 +78,7 @@
                                     </a>
                                     <small class="d-block text-secondary">Moreton Bay Regional Council - Virtual</small>
                                 </div>
-                                <small class="d-block">It like to work in web development in the tourism industry. From
+                                <small class="d-block">It was like to work in web development in the tourism industry. From
                                     planning the website, this program equiped me with the skills I needed to succeed in
                                     any web
                                     development role.</small>
