--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
-            <div class="small text-center text-muted">Made with ❤️ by Mouhammad Naeem Tahir | No copyrights reserved.
+            <div class="small text-center text-muted">Made with ❤️ by Muhammad Naeem Tahir | No copyrights reserved.
             </div>
 
         </div>
