--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,60 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <div class="card shadow-sm">
+                            <a href="https://bytewisebonus.netlify.app" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">RisRos
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/RisRos.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Splide</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://dobi.netlify.app/home.html" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Dobi
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/dobi.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Splide</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <a href="https://bytewiseblog.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">BlogSite
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/blog.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Carousel</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">CSS</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
                             <a href="https://github.com/muhammadnaeemtahir/pioneer-dashboard" target="_blank"
                                 class="text-decoration-none">
                                 <div class="card-header text-center">Pioneer
