index file updated

--- a/index.html
+++ b/index.html
@@ -108,54 +108,55 @@
                     <div class="col-md-4">
                         <div class="mb-3">
                             <div class="card shadow-sm">
-                                <a href="https://cyan.devarx.org/" target="_blank" class="text-decoration-none">
-                                    <div class="card-header text-center">Cyan Waterpark
+                                <a href="https://bytewisebonus.netlify.app" target="_blank"
+                                    class="text-decoration-none">
+                                    <div class="card-header text-center">RisRos
                                     </div>
                                     <div class="card-body p-0">
-                                        <img class="img-fluid" src="/assets/projects/cyan-waterpark.PNG" alt="">
+                                        <img class="img-fluid" src="/assets/projects/RisRos.PNG" alt="">
                                     </div>
                                     <div class="card-footer text-center">
-                                        <small class="badge rounded-pill text-bg-primary text-light">HTML</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">CSS</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">JS</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">Animations</small>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="mb-3">
-                            <div class="card shadow-sm">
-                                <a href="/free-qr/index.html" target="_blank" class="text-decoration-none">
-                                    <div class="card-header text-center">QR Code Generator
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <img class="img-fluid" src="/assets/projects/qr-code-generator.PNG" alt="">
-                                    </div>
-                                    <div class="card-footer text-center">
-                                        <small class="badge rounded-pill text-bg-primary text-light">HTML</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">CSS</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">JS</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">Open Source</small>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="mb-3">
-                            <div class="card shadow-sm">
-                                <a href="https://medvita.ro/" target="_blank" class="text-decoration-none">
-                                    <div class="card-header text-center">Medvita
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <img class="img-fluid" src="/assets/projects/medvita.PNG" alt="">
-                                    </div>
-                                    <div class="card-footer text-center">
-                                        <small class="badge rounded-pill text-bg-primary text-light">Laravel</small>
                                         <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
-                                        <small class="badge rounded-pill text-bg-primary text-light">Animations</small>
+                                        <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                        <small class="badge rounded-pill text-bg-primary text-light">Splide</small>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mb-3">
+                            <div class="card shadow-sm">
+                                <a href="https://dobi.netlify.app/home.html" target="_blank"
+                                    class="text-decoration-none">
+                                    <div class="card-header text-center">Dobi
+                                    </div>
+                                    <div class="card-body p-0">
+                                        <img class="img-fluid" src="/assets/projects/dobi.PNG" alt="">
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                        <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                        <small class="badge rounded-pill text-bg-primary text-light">Splide</small>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mb-3">
+                            <div class="card shadow-sm">
+                                <a href="https://bytewiseblog.netlify.app/" target="_blank"
+                                    class="text-decoration-none">
+                                    <div class="card-header text-center">BlogSite
+                                    </div>
+                                    <div class="card-body p-0">
+                                        <img class="img-fluid" src="/assets/projects/blog.PNG" alt="">
+                                    </div>
+                                    <div class="card-footer text-center">
+                                        <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                        <small class="badge rounded-pill text-bg-primary text-light">Carousel</small>
+                                        <small class="badge rounded-pill text-bg-primary text-light">CSS</small>
                                     </div>
                                 </a>
                             </div>
