--- a/portfolio.html
+++ b/portfolio.html
@@ -120,6 +120,23 @@
                 <div class="col-md-4">
                     <div class="mb-3">
                         <div class="card shadow-sm">
+                            <a href="https://deonapp.netlify.app/" target="_blank" class="text-decoration-none">
+                                <div class="card-header text-center">Deon App
+                                </div>
+                                <div class="card-body p-0">
+                                    <img class="img-fluid" src="/assets/projects/todo.PNG" alt="">
+                                </div>
+                                <div class="card-footer text-center">
+                                    <small class="badge rounded-pill text-bg-primary text-light">JavaScript</small>
+                                    <small class="badge rounded-pill text-bg-primary text-light">Bootstrap</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
                             <a href="https://github.com/muhammadnaeemtahir/pioneer-dashboard" target="_blank"
                                 class="text-decoration-none">
                                 <div class="card-header text-center">Pioneer
