twitter blog updated

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
                     <i class="fa-brands fa-whatsapp fs-3"></i>
                 </a>
             </div>
-<!--             <hr class="divider" />
+            <hr class="divider" />
             <div class="card rounded-0 border-0 p-0">
                 <a class="twitter-timeline" href="https://twitter.com/m_naeemtahir?ref_src=twsrc%5Etfw">Tweets by
                     m_naeemtahir</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div> -->
+            </div>
         </div>
     </section>
     <!-- Footer-->
