New assets (CV, Certifications) uploaded

--- a/internships.html
+++ b/internships.html
@@ -67,6 +67,48 @@
                     <div class="mb-3">
                         <div class="card shadow-sm">
                             <div class="card-body p-0">
+                                <img class="img-fluid"
+                                    src="/assets/files/internships-and-certificates/CLC-participation.jpg" alt="">
+                            </div>
+                            <div class="card-footer">
+                                <div class="mb-3">
+                                    <a href="#" target="_blank" class="fw-bold text-decoration-none text-dark">CLC
+                                        Conference
+                                    </a>
+                                    <small class="d-block text-secondary">Management Team - Onsite</small>
+                                </div>
+                                <small class="d-block">An international tech conference held annually in Pakistan with
+                                    guest speakers from across Pakistan and international. Talks from MNC job crakcers,
+                                    influencers, freelancers and more.</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body p-0">
+                                <img class="img-fluid"
+                                    src="/assets/files/internships-and-certificates/bytewise-fellowship-cert.png"
+                                    alt="">
+                            </div>
+                            <div class="card-footer">
+                                <div class="mb-3">
+                                    <a href="#" target="_blank" class="fw-bold text-decoration-none text-dark">Bytewise
+                                        Front-End Fellowship
+                                    </a>
+                                    <small class="d-block text-secondary">Bytewise Limited - Remote</small>
+                                </div>
+                                <small class="d-block">A three month long fellowship on frontend development track.
+                                    Enriched HTML, CSS, Bootstrap, JavaScript, jQuery, ReactJS, Tailwind CSS</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="mb-3">
+                        <div class="card shadow-sm">
+                            <div class="card-body p-0">
                                 <img class="img-fluid" src="/assets/files/internships-and-certificates/entpandweb.png"
                                     alt="">
                             </div>
@@ -78,7 +120,8 @@
                                     </a>
                                     <small class="d-block text-secondary">Moreton Bay Regional Council - Virtual</small>
                                 </div>
-                                <small class="d-block">It was like to work in web development in the tourism industry. From
+                                <small class="d-block">It was like to work in web development in the tourism industry.
+                                    From
                                     planning the website, this program equiped me with the skills I needed to succeed in
                                     any web
                                     development role.</small>
