--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
                     </p>
                     <div class="text-center">
                         <a href="https://www.linkedin.com/in/muhammadnaeemtahir/" target="_blank"
-                            class="text-light mx-1">
-                            <i class="bi bi-linkedin fs-3"></i>
+                            class="text-light mx-1 text-decoration-none">
+                            <i class=" bi bi-linkedin fs-3"></i>
                         </a>
-                        <a href="https://github.com/muhammadnaeemtahir" target="_blank" class="text-light mx-1">
-                            <i class="bi bi-github fs-3"></i>
+                        <a href="https://github.com/muhammadnaeemtahir" target="_blank"
+                            class="text-light mx-1 text-decoration-none">
+                            <i class=" bi bi-github fs-3"></i>
                         </a>
                     </div>
                     <div class="text-center my-3">
@@ -92,8 +93,8 @@
                     <p class="text-white-75 mb-4">A committed individual, who loves computing, philosphy and more. A
                         preptual Student of computer science and by profession I am a web developer skilled in frontend
                         and backend development both. I also design in my free time.</p>
-                    <a class="btn btn-light btn-xl" href="/assets/files/resume-muhammad-naeem-tahir.pdf"
-                        download>Download my resume</a>
+                    <a class="btn btn-light btn-xl" href="/assets/files/Muhammad Naeem - CV.pdf" download>Download my
+                        CV</a>
                 </div>
             </div>
         </div>
@@ -177,12 +178,12 @@
                 <p>Ready to start your next project? Reach me via given below options.</p>
             </div>
             <div class="text-center mb-3">
-                <a href="mailto:m.naeemtahir@hotmail.com" target="_blank" class="text-light mx-1">
-                    <i class="fa-regular fa-envelope fs-3"></i>
+                <a href="mailto:m.naeemtahir@hotmail.com" target="_blank" class="text-light mx-1 text-decoration-none">
+                    <i class=" fa-regular fa-envelope fs-3"></i>
                 </a>
                 <a href="https://wa.me/923184133228?text=Hello%2C%20I%20have%20a%20question%20about%20your%20service.%20Can%20you%20please%20help%20me%3F"
-                    target="_blank" class="text-light mx-1">
-                    <i class="fa-brands fa-whatsapp fs-3"></i>
+                    target="_blank" class="text-light mx-1 text-decoration-none">
+                    <i class=" fa-brands fa-whatsapp fs-3"></i>
                 </a>
             </div>
             <hr class="divider" />
