text opacity update

--- a/internships.html
+++ b/internships.html
@@ -51,7 +51,7 @@
                     <hr class="divider d-md-block d-none" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Extra curricular activities, Onsite and Virtual Internships,
+                    <p class="text-white mb-5">Extra curricular activities, Onsite and Virtual Internships,
                         fellowship and leadership experiences.
                     </p>
                 </div>
