--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Muhammad Naeem Tahir" />
     <title>Muhammad Naeem Tahir</title>
+
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
@@ -19,6 +20,8 @@
         rel="stylesheet" type="text/css" />
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -58,7 +61,7 @@
                     <hr class="divider d-md-block d-none" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Full stack Laravel & Frontend Developer
+                    <p class="text-white mb-5">Full stack Laravel & Frontend Developer
                     </p>
                     <div class="text-center">
                         <a href="https://www.linkedin.com/in/muhammadnaeemtahir/" target="_blank"
@@ -90,7 +93,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">About Me</h2>
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4">A committed individual, who loves computing, philosphy and more. A
+                    <p class="text-white mb-4">A committed individual, who loves computing, philosphy and more. A
                         preptual Student of computer science and by profession I am a web developer skilled in frontend
                         and backend development both. I also design in my free time.</p>
                     <a class="btn btn-light btn-xl" href="/assets/files/Muhammad Naeem - CV.pdf" download>Download my
