--- a/moocs.html
+++ b/moocs.html
@@ -52,7 +52,7 @@
                     <hr class="divider d-md-block d-none" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Massive Open Online Courses
+                    <p class="text-white mb-5">Massive Open Online Courses
                     </p>
                 </div>
             </div>
