--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                     <hr class="divider d-md-block d-none" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 mb-5">Projects made in using HTML, CSS, Bootstrap, jQuery, JavaScript, React
+                    <p class="text-white mb-5">Projects made in using HTML, CSS, Bootstrap, jQuery, JavaScript, React
                         & Laravel.
                     </p>
                 </div>
